--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
 * html {
-  padding: 0;
-  margin: 0;
+  padding: 0px;
+  margin: 0px;
   box-sizing: border-box;
 }
 
 body {
   margin: 0px;
-  font-family:Arial, Helvetica, sans-serif
+  font-family:Arial, Helvetica, sans-serif;
 }
 
 .header {
@@ -325,4 +325,22 @@ body {
 
 .nft-item:hover .nft-img img{
   transform: scale(1.2);
+}
+
+#owner-address {
+  margin: 20px;
+  padding: 10px;
+  border-radius: 20px;
+  border: none;
+}
+
+#search-nft-btn{
+  border: none;
+  padding: 5px 7px 5px 7px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+#search-nft-btn i{
+  font-size: 16px;
 }
